# emica

./: .gitignore  .pre-commit-config.yaml  AUTHORS  Makefile  README.md  instances.yaml  mkdocs.yml  pyproject.toml  sonar-project.properties
docker/: Dockerfile  requirements.txt
docs/: index.md
emica/: __init__.py  cli.py  main.py
emica/core/: config.py  filter.py  loader.py  metrics.py  pipeline.py  writer.py
emica/filters/: cpu_energy.py  demo.py  memory_energy.py  sci.py  sci_energy.py  sci_material.py  sci_operation.py
emica/loaders/: demo.py  prometheus.py
emica/writers/: demo.py
tests/: conftest.py  test_cli.py
tests/core/: test_pipeline.py
tests/filters/: test_cpu_energy.py  test_memory_energy.py  test_sci.py  test_sci_energy.py  test_sci_material.py  test_sci_operation.py
tests/loaders/: test_promentheus.py
